feat: setup ci/cd

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log
 .vscode
 .DS_Store
 
-# install nano, docker compose, iputils ping
+# install nano, iputils ping
 # enable a2enmod header, rewrite
 # setting ssl
 # allow header 
